--- a/gitremotecommand/wizard/projectwizardpage.ui
+++ b/gitremotecommand/wizard/projectwizardpage.ui
@@ -81,16 +81,29 @@
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="gitRepoLabel">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Git repository:</string>
        </property>
       </widget>
      </item>
      <item row="3" column="1" colspan="2">
-      <widget class="QLineEdit" name="gitRepoLineEdit"/>
+      <widget class="QLineEdit" name="gitRepoLineEdit">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="placeholderText">
+        <string>Specify remote URL</string>
+       </property>
+      </widget>
      </item>
      <item row="4" column="1" colspan="2">
       <widget class="QCheckBox" name="pushToRemoteCheckBox">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Push to remote</string>
        </property>
